stylesheets/main.css
@font-face {
    font-family: 'LucidaGrande';
    src: url('../assets/lucidagrande.ttf') format('truetype');
}

* {
    box-sizing: border-box;
}

body {
    background-color: #fdfdfd;
    font-size: 20px;
    line-height: 1.25;
}

ul {
    list-style-type: "- ";
}

li {
    margin-bottom: 12px;
}

li:last-child {
    margin-bottom: 0;
}

.links-list {
    list-style-type: none;
}

.links-list li {
    margin-bottom: 0;
}

body {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    height: 100vh;
    margin: 0;
}

.layout {
    display: flex;
    align-items: flex-start;
    gap: 38px;
}

.sidebar {
    flex: 0 0 400px;
    max-width: 400px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.portrait {
    max-width: 400px;
    width: 400px;
    position: relative;
    background-image: url('../assets/MARCUS9.jpg');
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-position: 0 0;
    aspect-ratio: 1/1;
    container-type: inline-size;
}

.portrait-container {
    width: 400px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

.portrait > * {
    position: absolute;
}

.portrait-text {
    font-size: 8.66cqw;
    transform: scaleY(3) scaleX(1.05) translateX(1cqw) translateY(-7cqw);
    top: 88%;
    left: 6%;
    color: transparent;
}

.portrait-pika {
    top: 28%;
    left: 0%;
    width: 30%;
}

.content {
    display: flex;
    flex-direction: column;
    gap: 0px;
    flex: 1 1 auto;
    min-width: 400px;
    padding: 16px 10px 60px 0;
}

.links-container {
    width: 100%;
    display: flex;
}

.links {
    --translate-x: 60px;
    transform: scaleX(1.2) scaleY(0.8333) translateX(var(--translate-x)) translateY(-16px);
    height: 150px;
}

.links a {
    position: relative;
    text-decoration: none;
    transition: all 0.2s ease;
}

.links a:hover::before,
.links li.active a::before {
    content: '';
    position: absolute;
    left: -30px;
    top: 50%;
    transform: translateY(-50%) scaleX(-1);
    width: 30px;
    height: 30px;
    background-image: url('../assets/arrow.gif');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

@media (max-width: 900px) {
    .layout {
        flex-direction: column;
        gap: 0;
        max-width: 600px;
        width: 100%;
    }
    .sidebar,
    .content {
        flex: 0 0 auto;
        width: 100%;
        max-width: 100%;
    }
    .sidebar {
        align-items: center;
    }
    .links {
        max-width: 100%;
        height: 140px;
        margin-top: -10px;
        margin-left: -4px;
        --translate-x: 0px;
    }
    .content {
        min-width: unset;
        padding: 0 10px 60px;
    }
    .portrait {
        width: min(400px, 100%);
    }
    .portrait-container {
        width: 100%;
        max-width: 400px;
        aspect-ratio: 4/3;
    }
    .links-container {
        justify-content: center;
        align-items: center;
    }

    body {
        align-items: flex-start;
    }

    .subscribe-form {
        flex-direction: column;
        align-items: stretch;
        gap: 16px;
    }
    
    .subscribe-form .aqua-input,
    .subscribe-form .aqua-button {
        width: 100%;
    }
}



.aqua-input {
    padding: 16px 24px;
    border: none;
    border-radius: 23423px;
    background: linear-gradient(to bottom, #fff, #f7f7f7);
    box-shadow:
        inset 0 2px 4px rgba(0, 0, 0, 0.35),
        0 0 2px rgba(0, 0, 0, 0.35);
}

.aqua-button {
    position: relative;
    padding: 16px 32px;
    border-radius: 234234px;
    border: none;
    color: #000;
    text-shadow: 0 3px 2px rgba(0,0,0,0.25);
    background: linear-gradient(to bottom, #4d85be 10%, #b2f4ff 90%);
    box-shadow:
        inset 0 4px 12px #03367b,
        0 0 2px #03367b,
        0 4px 8px rgba(0,0,0,0.25);
    cursor: pointer;
}

.aqua-button::after {
    position: absolute;
    top: 2px;
    left: 50%;
    transform: translateX(-50%);
    content: '';
    display: block;
    height: 12px;
    width: calc(100% - 28px);
    background-image: linear-gradient(to bottom, rgba(255,255,255,0.75), rgba(255,255,255,0.15));
    z-index: 123123;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    filter: blur(1px);
}

.aqua-button:active {
    box-shadow:
        inset 0 4px 12px #03367b,
        0 0 2px #03367b,
        0 4px 8px rgba(0,0,0,0.25),
        0 0 8px rgba(0,0,0,0.4);
}

.subscribe-form {
    display: flex;
    align-items: center;
    gap: 12px;
    flex-wrap: wrap;
}

.subscribe-form p {
    margin: 0 0 8px 0;
    width: 100%;
}

.aqua-input, .aqua-button {
    font-family: 'LucidaGrande', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
    font-size: 16px;
}

summary {
    cursor: pointer;
}

.soon {
    text-decoration: line-through;
}

